--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "hq-tools",
+  "name": "hq-toolkit",
   "version": "0.1.1",
   "main": "hq-0.1.1-react.min.js",
   "module": "hq-0.1.1-react.min.js",
   "sideEffects": false,
   "license": "MIT",
-  "description": "React component to embed the HQ Tools Multisend feature",
+  "description": "React component to embed the HQ Toolkit Multisend feature",
   "files": [
     "hq-0.1.1-react.min.js"
   ],
   "author": "Thomas Gorissen <mail@serrynaimo.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flowstation/hq-tools.git"
+    "url": "git+https://github.com/flowstation/hq-toolkit.git"
   },
   "dependencies": {
     "react": "^18.2.0"
